// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format should call csv formatter with correct configuration 1`] = `
Array [
  Array [
    Array [
      Array [
        "Name",
        "Customer",
      ],
      Array [
        "test-project-csv",
        "test-customer-csv",
      ],
    ],
  ],
]
`;

exports[`format should call json formatter with correct configuration 1`] = `
Array [
  Array [
    Array [
      Array [
        "Name",
        "Customer",
      ],
      Array [
        "test-project-json",
        "test-customer-json",
      ],
    ],
  ],
]
`;

exports[`format should call simple formatter with correct configuration 1`] = `
Array [
  Array [
    Array [
      Array [
        "Name",
        "Customer",
      ],
      Array [
        "test-project-simple",
        "test-customer-simple",
      ],
    ],
  ],
]
`;

exports[`format should call table formatter with correct configuration 1`] = `
Array [
  Array [
    Array [
      Array [
        "Name",
        "Customer",
      ],
      Array [
        "test-project-table",
        "test-customer-table",
      ],
    ],
  ],
]
`;
